# DIP_AI_ML_DL

./: .gitignore  OpenCV Course - Full Tutorial with Python.md  main.py  open-cv.md  pyproject.toml  read.py  req.txt
AI/: ai_2.ipynb  ai_3.ipynb  ai_4.ipynb  ai_5.ipynb  ai_6.ipynb  ai_7.ipynb  ai_8.ipynb  ai_9.ipynb  assignment.ipynb  assignment_2.ipynb  assignment_3.ipynb  assignment_4.ipynb  check_1.py  expe.ipynb  experiment_1_history.csv  experiment_ok_history.csv  first_model.py  lab-1.ipynb  lab-2.ipynb  lab-2.py  lab-4.ipynb  lab_3.ipynb  mlp_training.ipynb  polynomial_regression_model.h5  predict.py  predict_number.ipynb  predict_number.py  run_server.py  train_1.ipynb  train_save.ipynb
DL/: a_02_test.py  a_03_01.py  assignment_01.py  assignment_02_train.py  assignment_03.py  resize_img.py
ML/: knn_classifier.ipynb
dip/: a_img.py  bit_sliceing.py  cal_historgram.py  camera_histogram.py  camera_histogram_gpt.py  canny_edege_detection.ipynb  canny_image.py  channel.py  check.ipynb  clahe.py  compression.ipynb  custom_histogram_equalization.py  dct.ipynb  edge_detction.py  fft.ipynb  filter_test.py  filtter_implenmentation.py  gray_scale.py  hist_matching.ipynb  histogram_matching.ipynb  histogram_matching.py  historgram_eqalization.ipynb  historgram_eqalization.py  histrogram.py  imag_black.py  manual_filter_implementation.ipynb  morphology.ipynb  morphology.py  non_linear_fun.py  question_1.py  question_2.py  question_3.py  question_4.py  spatial_filter.py  thresholding.py  zero_padding.py
model/: vgg_scrach.py
opencv/: bitwize_operation.py  draw_line.py  (+6 more)
(+69 files in other folders)
