[project]
name = "opencv-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glob2>=0.7",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pennylane>=0.42.3",
    "pywavelets>=1.9.0",
    "scikit-image>=0.25.2",
]
